tests/error/04.desc
Runtime error - index func: negative index